tegra: hwpm: use kstable available APIS
- Some of the APIs are not available on stable kernel. Use kstable
specific APIs with LINUX_KERNEL macro condition.
- Temporarily comment functions that are not available on Kstable.
- Next chip headers are renamed to accommodate more than one next chip.
Update next chip includes in init.c and driver.c files.
- Rename TEGRA_SOC_HWPM_IP_INACTIVE to TEGRA_HWPM_IP_INACTIVE to follow
other macro/enum naming convention.
- Use is_resource_active() HAL instead of chip specific function.
- Create clock reset functions that will allow us to handle change in
APIs on kstable.

Jira THWPM-41

Change-Id: I55f58fa51cf9ae96ee9a9565942e68b3b2bb76ee
Signed-off-by: Vedashree Vidwans <vvidwans@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2764840
Reviewed-by: svc-mobile-coverity <svc-mobile-coverity@nvidia.com>
Reviewed-by: Seema Khowala <seemaj@nvidia.com>
GVS: Gerrit_Virtual_Submit <buildbot_gerritrpt@nvidia.com>

--- a/Makefile.linux.sources
+++ b/Makefile.linux.sources
@@ -5,6 +5,7 @@
 # SPDX-License-Identifier: GPL-2.0
 
 nvhwpm-linux-objs += os/linux/aperture_utils.o
+nvhwpm-linux-objs += os/linux/clk_rst_utils.o
 nvhwpm-linux-objs += os/linux/driver.o
 nvhwpm-linux-objs += os/linux/io_utils.o
 nvhwpm-linux-objs += os/linux/ip_utils.o
