tegra: hwpm: t234: decouple force IP, minimal cfg
- HWPM driver requires to know if an IP is available for performance
measurements. The ideal way is for IP driver registration with HWPM
driver. This way IP driver can share required power management and
register access function pointers.
- For IPs that do not have registration mechanism implemented, a
workaround to set an IP enabled is implemented in the HWPM driver.
- In the recent releases, MSS channel, PVA and DLA IPs are the only PORs
for production builds. Currently, this is acheived using the combination
of minimal build and force enable flags.
- However, this implementation limits the number of enabled IPs on TOT
to only minimal expected ones.
- This patch modifies the force enable IP logic implementation to make
force enable and minimal IP flag definition more clear.
- CONFIG_T234_HWPM_ALLOW_FORCE_ENABLE should be used to purposely enable
IPs that do not have registration mechanism implemented. This flag is
used for POR or non-POR IPs. Ideally, all IPs should implement HWPM
registration and force enable flag should not be required.
- CONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE should be used to implement logic
for POR IPs. In other words, if CONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE is
not defined, non-POR IPs should be included in the builds. This patch
sets MINIMAL IP config only for external non-safety builds.

- Fix include t234_perfmon_device_index.h error in t234_mss_mcf.c file.
- Add missing device index for PVA perfmon C0.

Jira THWPM-41

Change-Id: I20651eac14b6d42e5bf3cc5164d1f64ec208dc04
Signed-off-by: Vedashree Vidwans <vvidwans@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-hwpm/+/2818735
Reviewed-by: Seema Khowala <seemaj@nvidia.com>
GVS: Gerrit_Virtual_Submit <buildbot_gerritrpt@nvidia.com>

--- a/drivers/tegra/hwpm/Makefile.t234.sources
+++ b/drivers/tegra/hwpm/Makefile.t234.sources
@@ -25,14 +25,31 @@ nvhwpm-t234-objs += hal/t234/ip/rtr/t234_rtr.o
 nvhwpm-t234-objs += hal/t234/ip/pma/t234_pma.o
 
 #
-# Define a Minimal IP config flag
-# Enable only MSS_Channel, NVDLA and PVA IPs
-# When CONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE is set to y.
+# One of the HWPM components is a perfmux. Perfmux registers belong to the
+# IP domain. There are 2 ways of accessing perfmux registers
+# - option 1: implement HWPM <-> IP interface. IP drivers register with HWPM
+#             driver and share required function pointers
+# - option 2: map perfmux register address in HWPM driver
+# Option 1 is the preferred solution. However, IP drivers have yet to
+# implement the interface. Such IPs can be force enabled from HWPM driver
+# perspective (option 2). Marking an IP available forcefully requires the user
+# to unpowergate the IP before running any HWPM experiments.
 #
-CONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE=y
-
-ifeq ($(CONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE),y)
+# Enable CONFIG_T234_HWPM_ALLOW_FORCE_ENABLE for internal builds.
+# Note: We should work towards removing force enable flag dependency.
+#
+ifeq ($(NV_BUILD_CONFIGURATION_IS_EXTERNAL),0)
 ccflags-y += -DCONFIG_T234_HWPM_ALLOW_FORCE_ENABLE
+endif
+
+#
+# Currently, PVA, DLA and MSS channel are the IPs supported
+# for performance metrics in external builds.
+# Define CONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE flag.
+#
+ifeq ($(NV_BUILD_CONFIGURATION_IS_EXTERNAL),1)
+CONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE=y
+ccflags-y += -DCONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE
 endif
 
 ifeq ($(CONFIG_TEGRA_GRHOST_NVDLA),y)
@@ -50,6 +67,7 @@ ccflags-y += -DCONFIG_T234_HWPM_IP_MSS_CHANNEL
 nvhwpm-t234-objs += hal/t234/ip/mss_channel/t234_mss_channel.o
 endif
 
+# Include other IPs if minimal build is not enabled.
 ifneq ($(CONFIG_TEGRA_HWPM_MINIMAL_IP_ENABLE),y)
 ccflags-y += -DCONFIG_T234_HWPM_IP_DISPLAY
 nvhwpm-t234-objs += hal/t234/ip/display/t234_display.o
