hwpm: Makefile: Add support to make as module
Add support to make the HWPM driver as module.
Set appropriate path and environment variable
which needs to be passed when building the driver
as module.
Use basic fuse.h file instead of using fuse-helper.h which is not
available in OOT builds.
Introduce HWPM mock file to add definitions for register and
unregister used if HWPM is not compiled in a build.

Bug 4088571

Change-Id: Id6cfb78356d752b963ad7eb16e39b85df92a9a4b
Signed-off-by: Laxman Dewangan <ldewangan@nvidia.com>
Signed-off-by: Vedashree Vidwans <vvidwans@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-hwpm/+/2894547
GVS: Gerrit_Virtual_Submit <buildbot_gerritrpt@nvidia.com>

--- a/drivers/tegra/hwpm/Makefile
+++ b/drivers/tegra/hwpm/Makefile
@@ -1,13 +1,21 @@
+# Copyright (c) 2022, NVIDIA CORPORATION. All rights reserved.
 #
 # Tegra SOC HWPM
 #
 
-# SPDX-License-Identifier: GPL-2.0
 GCOV_PROFILE := y
 
-ccflags-y += -I$(srctree.nvidia)/include
-ccflags-y += -I$(srctree.nvidia)/drivers/platform/tegra/hwpm/include
-ccflags-y += -I$(srctree.nvidia)/drivers/platform/tegra/hwpm
+ifeq ($(origin srctree.hwpm), undefined)
+srctree.hwpm := $(abspath $(shell dirname $(lastword $(MAKEFILE_LIST))))/../../..
+endif
+
+CONFIG_TEGRA_SOC_HWPM := y
+ccflags-y += -DCONFIG_TEGRA_SOC_HWPM
+
+CONFIG_TEGRA_T234_HWPM := y
+ccflags-y += -DCONFIG_TEGRA_T234_HWPM
+
+NVHWPM_OBJ = m
 
 # For OOT builds, set required config flags
 ifeq ($(CONFIG_TEGRA_OOT_MODULE),m)
@@ -17,26 +25,24 @@ ccflags-y += -DCONFIG_TEGRA_HWPM_OOT
 CONFIG_TEGRA_FUSE_UPSTREAM := y
 ccflags-y += -DCONFIG_TEGRA_FUSE_UPSTREAM
 
-CONFIG_TEGRA_T234_HWPM := y
-ccflags-y += -DCONFIG_TEGRA_T234_HWPM
-NVHWPM_OBJ = m
+LINUXINCLUDE += -I$(srctree.hwpm)/include
+LINUXINCLUDE += -I$(srctree.hwpm)/drivers/tegra/hwpm/include
+LINUXINCLUDE += -I$(srctree.hwpm)/drivers/tegra/hwpm
+
 else
-NVHWPM_OBJ = y
+ccflags-y += -I$(srctree.nvidia)/include
+ccflags-y += -I$(srctree.hwpm)/include
+ccflags-y += -I$(srctree.hwpm)/drivers/tegra/hwpm/include
+ccflags-y += -I$(srctree.hwpm)/drivers/tegra/hwpm
+
 endif
 
+ifeq ($(NV_BUILD_CONFIGURATION_IS_SAFETY),1)
+obj-${NVHWPM_OBJ} += tegra_hwpm_mock.o
+else
 # Add required objects to nvhwpm object variable
-# Include common files
-include $(srctree.nvidia)/drivers/platform/tegra/hwpm/Makefile.common.sources
-nvhwpm-objs += ${nvhwpm-common-objs}
-
-# Include linux files
-include $(srctree.nvidia)/drivers/platform/tegra/hwpm/Makefile.linux.sources
-nvhwpm-objs += ${nvhwpm-linux-objs}
-
-ifeq ($(CONFIG_TEGRA_T234_HWPM),y)
-# Include T234 files
-include $(srctree.nvidia)/drivers/platform/tegra/hwpm/Makefile.t234.sources
-nvhwpm-objs += ${nvhwpm-t234-objs}
-endif
+include $(srctree.hwpm)/drivers/tegra/hwpm/Makefile.sources
 
 obj-${NVHWPM_OBJ} += nvhwpm.o
+
+endif
