--- a/drivers/tegra/hwpm/Kconfig
+++ b/drivers/tegra/hwpm/Kconfig
@@ -1,3 +1,10 @@
+config TEGRA_SOC_HWPM
+	tristate "Tegra SOC HWPM driver"
+	default m
+	help
+	  The SOC HWPM driver enables performance monitoring for various Tegra
+	  IPs.
+
 config TEGRA_T234_HWPM
 	bool "Tegra T23x HWPM driver"
 	depends on TEGRA_SOC_HWPM && ARCH_TEGRA_23x_SOC
